--- a/Iceshrimp.Frontend/Components/Dropdown.razor.css
+++ b/Iceshrimp.Frontend/Components/Dropdown.razor.css
@@ -1,7 +1,7 @@
 .dropdown-menu {
     position: absolute;
-    top: 3rem;
-    left: 1.75rem;
+    top: 2.5rem;
+    left: 1.25rem;
     background-color: var(--background-color);
     padding: 0.5rem;
     border-color: var(--highlight-color);
